<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MSafe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- mainactiviy主页背景上面的文字 -->
    <string name="saftytitle_mainlayout_background_up">安全中心</string>
    <string name="title_breathecircle">一键检测</string>
    <string name="title_clearrubbish_btn_mainlayout">垃圾清理</string>
    <string name="title_fileadmin_btn_mainlayout">文件管理</string>
    <string name="title_apkrubbish_btn_mainlayout">应用清理</string>
    <string name="title_wrapadmin_btn_mainlayout">流量管理</string>
    <string name="title_virusclear_btn_mainlayout">病毒查杀</string>
    <string name="title_rootadmin_btn_mainlayout">权限管理</string>
    <string name="title_lowpower_btn_mainlayout">省电模式</string>
    <string name="title_extra_btn_mainlayout">额外</string>
    <string name="grid_item_check0">正在检查</string>
    <string name="clear">清理</string>
    <string name="des_filenum">个大文件</string>
    <string name="totalsize_des_exp_fileadmin">共323M</string>
    <string name="finish">完成</string>
    <string name="null_rubbish_txt">没有垃圾占用</string>
    <string name="scan_txt">正在扫描...</string>
    <string name="virus_check_txt0">恶意应用</string>
    <string name="virus_check_txt1">隐患应用</string>
    <string name="virus_check_txt2">支付风险</string>
    <string name="virus_check_txt3">盗号风险</string>
    <string name="rootamin_title0">自启动</string>
    <string name="rootamin_title1">通知</string>
    <string name="rootamin_title2">安全</string>
    <string name="rootamin_title3">隐私</string>
    <string name="tab_child1_root_titles0">悬浮窗</string>
    <string name="tab_child1_root_titles1">通知栏窗口</string>
    <string name="tab_child2_root_titles0">拨打电话</string>
    <string name="tab_child2_root_titles1">发送信息</string>
    <string name="tab_child2_root_titles2">发送彩信</string>
    <string name="tab_child2_root_titles3">打开移动网络</string>
    <string name="tab_child2_root_titles4">开启wifi</string>
    <string name="tab_child2_root_titles5">打开蓝牙</string>
    <string name="tab_child_item_tag">></string>
    <string name="tab_child3_root_titles0">读取通话记录</string>
    <string name="tab_child3_root_titles1">读取短信记录</string>
    <string name="tab_child3_root_titles2">读取彩信记录</string>
    <string name="tab_child3_root_titles3">通话及本地录音</string>
    <string name="tab_child3_root_titles4">获取定位位置</string>
    <string name="tab_child3_root_titles5">拍照和录像</string>
    <string name="tab_child3_root_titles6">获取手机识别码</string>
    <string name="tab_child3_root_titles7">修改系统设置</string>
    <string name="tab_child0_root_">没有需要优化的项目</string>
    <string name="tab_child0_tip1">款应用禁用自启动</string>
    <string name="tab_child0_tip0">款应用允许自启动</string>
    <string name="tab_child0_tip11">无自启动应用</string>
    <string name="tab_child0_tip00">自启动应用</string>
    <string name="powerdes">剩余可用时间</string>
    <string name="power_str0">智能省电模式</string>
    <string name="power_str1">极限省电模式</string>
    <string name="power_str2">自定义模式</string>
    <string name="power_button_str">启动</string>
    <string name="total_time">2136</string>
    <string name="scan_one">一键检测</string>
    <string name="tanhao">!</string>
    <string name="duihao">√</string>
    <string name="juhao">。</string>

    <!-- 垃圾清理settings属性 -->
    <string name="setting_rubbish_str">设置</string>
    <string name="setting_rubbish_title0">内存加速</string>
    <string name="setting_rubbish_title1">添加快捷方式至桌面</string>
    <string name="setting_rubbish_title2">内存加速白名单</string>
    <string name="setting_rubbish_title6">内存扫描优化</string>
    <string name="setting_rubbish_title7">每天一次</string>
    <string name="setting_rubbish_title8">11:24</string>
    <string name="setting_rubbish_title3">定时扫描</string>
    <string name="setting_rubbish_title4">包月流量</string>
    <string name="setting_rubbish_title5">扫描时间</string>
    <string name="setting_rubbish_jiantou">></string>

    <!-- 文件管理 -->
    <string name="fileadmin_none_sdcard">未插入sdcard，轻稍后再试!</string>
    <!-- 文件管理弹出框 -->
    <string name="fileadmin_pop_filetype0">全部</string>
    <string name="fileadmin_pop_filetype1">压缩包</string>
    <string name="fileadmin_pop_filetype2">视频</string>
    <string name="fileadmin_pop_filetype3">音乐</string>
    <string name="fileadmin_pop_filetype4">文档</string>
    <string name="fileadmin_pop_filetype5">其他</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="source_str">来源 :</string>
    <string name="modify_time_str">修改时间:</string>
    <string name="filepath_str">文件路径:</string>
    <!-- apk管理 -->
    <string name="apk_installed_time_str">已安装</string>
    <string name="zhanyong">占用</string>
    <string name="apktype_title0">时间排序</string>
    <string name="apktype_title1">大小排序</string>
    <!-- wap Settings设置 -->
    <string name="wap_setting_title">流量设置</string>
    <string name="setting_wap_title0">流量监控</string>
    <string name="setting_wap_title1">基础设置</string>
    <string name="setting_wap_title2">包月流量</string>
    <string name="setting_wap_title3">已用流量</string>
    <string name="setting_wap_title4">流量使用预警值</string>
    <string name="wapadmin_title0">移动网络</string>
    <string name="wapadmin_title1">WLAN网络</string>
    <!-- wapadmin 列表 -->
    <string name="wapadmin_netdetail_gprs_title">本月使用流量排行</string>
    <string name="wapadmin_netdetail_gprs_btntitle">流量开关</string>
    <string name="wapadmin_netdetail_wifi_title">本月使用流量排行</string>
    <string name="wapadmin_netdetail_wifi_btntitle">流量开关</string>
    <string name="wait_for_load">正在载入...</string>
    <string name="wapadmin_scan_none">未扫描到有效数据</string>

    <!-- virvussetting -->
    <string name="setting_virvus_title0">扫描未安装应用</string>
    <string name="setting_virvus_title1">受信任应用</string>
    <string name="setting_virvus_title2">云查杀</string>
    <string name="setting_virvus_title3">WLAN自动更新病毒库</string>
    <string name="setting_virvus_title4">病毒库更新</string>
    <string name="setting_virvus_title5">检查更新</string>
    <string name="setting_virvus_test">上次更新:今天</string>
    <string name="virvus_init_engine">正在初始化128位病毒引擎</string>
	<string name="virvus_engine_shithapped">草泥马，傻逼玩意，老子病毒引擎崩溃了</string>
	<string name="virvus_scan_over">扫描完毕</string>
	
	<!-- PowerSetting -->
	<string name="power_admin_settings">设置</string>
	<string name="power_admin_title0">自动省电</string>
	<string name="power_admin_title1">低电量省电提示</string>
	<string name="power_admin_title2">低电量时提醒进入极省电模式</string>
	<string name="power_admin_title3">低电量值</string>
	<string name="power_admin_title4">定时开启</string>
	<string name="power_admin_title5">定时开启省电模式</string>
	<string name="power_admin_title6">模式选择</string>
	<string name="power_admin_title7">极限省电模式</string>
	<string name="power_admin_title8">开启时间</string>
	<string name="power_admin_title9">关闭时间</string>
	<string name="power_admin_title10">23:00</string>
	<string name="power_admin_title11">05:00</string>
	
	<!-- rubbishSetting -->
	<string name="rubbish_setting_scan_time0">每天一次</string>
	<string name="rubbish_setting_scan_time1">三天一次</string>
	<string name="rubbish_setting_scan_time2">一周一次</string>
	<string name="rubbish_setting_scan_time3">一月一次</string>
</resources>