<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/padding_list"
    android:paddingTop="@dimen/padding_list" >

    <ImageView
        android:id="@+id/grid_item_image"
        android:layout_width="@dimen/all_item_app_icon_size"
        android:layout_height="@dimen/all_item_app_icon_size"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/grid_item_rubbish_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/padding_list"
        android:layout_toRightOf="@id/grid_item_image"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_item_check0"
            android:textColor="@color/black"
            android:textSize="@dimen/rubbish_setting_title_size" />

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_list_helf"
            android:text="@string/grid_item_check0"
            android:textColor="@color/detail_rubbish_scan_txtcolor"
            android:textSize="@dimen/rubbish_setting_des_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/grid_rubbish_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/checked"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:paddingRight="0dp"
        android:text="@string/duihao"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_title_rubbish" />
</RelativeLayout>